# Corvid_DO

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  FEATURE_GAP_ANALYSIS.md  README.md  alembic.ini  demo-scenarios.md  docker-compose.yml  email-update.txt  pyproject.toml
.github/workflows/: ci.yml
corvid/: config.py  test_config.py  types.py
corvid-ui/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
corvid-ui/src/: App.tsx  index.css
corvid/agent/: __init__.py  agent.py  guardrails.py
corvid/api/: dependencies.py  limiter.py  main.py
corvid/db/: models.py  session.py
corvid/ingestion/: __init__.py  advisories.py  loader.py  mitre.py  nvd.py
corvid/worker/: enrichment.py  normalizer.py  orchestrator.py  tasks.py
deploy/: README.md  do-app-spec.yaml  provision.sh
docs/: FUNCTIONAL_TESTING_PLAN.md  LIVE_TESTING_GUIDE.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASES_3_5_PLAN.md  PROJECT.md  UI_DESIGN.md  code-quality-report.md
scripts/: generate_test_data.py  load_test.py  run_all_tests.sh  run_smoke_tests.sh  test_api_endpoints.sh
tests/: TESTING_PLAN.md  conftest.py  test_e2e_pipeline.py
tests/agent/: __init__.py  test_agent.py  test_agent_extended.py  test_search_tools_extended.py  test_tools.py
tests/api/: test_analyze.py  test_bulk_import.py  test_health.py  test_iocs.py  test_iocs_enrich.py  test_main_extended.py  test_models.py
tests/db/: test_models.py
tests/e2e/: README.md  test_complex_deployment.py  test_do_deployment.py
tests/ingestion/: __init__.py  test_ingestion.py  test_nvd_extended.py  (+1 more)
(+67 files in other folders)
